--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,16 @@ packages = [{include = "vehicle_location_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pydantic = "^1.10.2"
+dynaconf = "^3.1.11"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 ipdb = "^0.13.9"
 ipython = "^8.6.0"
+black = "^22.10.0"
+mypy = "^0.991"
 
 [build-system]
 requires = ["poetry-core"]
