--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "vehicle_location_service"}]
 python = "^3.8"
 pydantic = "^1.10.2"
 dynaconf = "^3.1.11"
+numpy = "^1.23.4"
 
 
 [tool.poetry.group.dev.dependencies]
