--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 pydantic = "^1.10.2"
 dynaconf = "^3.1.11"
 numpy = "^1.23.4"
+bottle = "^0.12.23"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,6 +20,8 @@ ipdb = "^0.13.9"
 ipython = "^8.6.0"
 black = "^22.10.0"
 mypy = "^0.991"
+webtest = "^3.0.0"
+mock = "^4.0.3"
 
 [build-system]
 requires = ["poetry-core"]
