--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^1.10.2"
 dynaconf = "^3.1.11"
 numpy = "^1.23.4"
 bottle = "^0.12.23"
+peewee = "^3.15.4"
 
 
 [tool.poetry.group.dev.dependencies]
