--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^22.10.0"
 mypy = "^0.991"
 webtest = "^3.0.0"
 mock = "^4.0.3"
+types-mock = "^4.0.15.2"
 
 [build-system]
 requires = ["poetry-core"]
