--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mypy = "^0.991"
 webtest = "^3.0.0"
 mock = "^4.0.3"
 types-mock = "^4.0.15.2"
+types-waitress = "^2.1.4.3"
 
 [build-system]
 requires = ["poetry-core"]
